Blender crashes when trying to enter edit mode on instanced objects #64399

Closed
opened 2019-05-09 18:29:46 +02:00 by Artem · 5 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-09 10:46, hash: f877022956
Worked: (optional)

Short description of error
Title says it all

Exact steps for others to reproduce the error
Try entering edit mode on the cube
sample1.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01 **Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-09 10:46, hash: `f877022956` Worked: (optional) **Short description of error** Title says it all **Exact steps for others to reproduce the error** Try entering edit mode on the cube [sample1.blend](https://archive.blender.org/developer/F7021459/sample1.blend)
Author

Added subscriber: @Hickz

Added subscriber: @Hickz

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29
Clément Foucault was assigned by Bastien Montagne 2019-05-10 09:41:26 +02:00

@fclem bisecting leads to 901026c493…

Also, there are some recent commits that break basic build (source/blender/draw/intern/draw_cache_impl_mesh.c:2257:12: error: ‘MeshBatchCache’ {aka ‘struct MeshBatchCache’} has no member named ‘is_sculpt_points_tag’ , 8c5c02932f and a few others). That should never happen in master, please ensure all your commits there always build fine (and do not crash on startup) at least. ;)

@fclem bisecting leads to 901026c493… Also, there are some recent commits that break basic build (`source/blender/draw/intern/draw_cache_impl_mesh.c:2257:12: error: ‘MeshBatchCache’ {aka ‘struct MeshBatchCache’} has no member named ‘is_sculpt_points_tag’ `, 8c5c02932f and a few others). That should never happen in master, please ensure all your commits there **always** build fine (and do not crash on startup) at least. ;)

This issue was referenced by 7a3833ed23

This issue was referenced by 7a3833ed235afbf79d3b11043fbdeb5282574fc0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64399
No description provided.