Fix T64399 Crash when trying to enter edit mode on instanced objects